<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".secondscreen.SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/secondFragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/second_fragment_title"
        android:textSize="25sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/increaseSecondCounterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_second_counter"
        app:layout_constraintBottom_toTopOf="@+id/showSecondCounterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/secondFragmentTitle" />

    <Button
        android:id="@+id/showSecondCounterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/show_second_counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>